--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3"
   }
